--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
       "express": "^4.17.1",
       "express-async-errors": "^3.1.1",
       "express-fileupload": "^1.2.1",
+      "helmet": "^4.6.0",
       "http-status-codes": "^2.1.4",
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^6.0.13",
-      "nodemon": "^2.0.15"
+      "nodemon": "^2.0.15",
+      "xss-clean": "^0.1.1"
    }
 }
