--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
    "description": "",
    "main": "app.js",
    "scripts": {
-      "dev": "nodemon app",
-      "test": "echo \"Error: no test specified\" && exit 1"
+      "start": "node app.js",
+      "dev": "nodemon app.js"
    },
    "keywords": [],
    "author": "",
@@ -24,5 +24,8 @@
       "mongoose": "^6.0.13",
       "nodemon": "^2.0.15",
       "xss-clean": "^0.1.1"
+   },
+   "engines": {
+      "node": "14.x"
    }
 }
