post delete route and socketio added

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^6.0.13",
       "nodemon": "^2.0.15",
+      "socket.io": "^4.4.0",
       "xss-clean": "^0.1.1"
    },
    "engines": {
