--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "axios": "^0.26.1",
       "bcryptjs": "^2.4.3",
       "cloudinary": "^1.27.1",
       "cors": "^2.8.5",
