--- a/package.json
+++ b/package.json
@@ -1,33 +1,34 @@
 {
-   "name": "fb-server",
-   "version": "1.0.0",
-   "description": "",
-   "main": "app.js",
-   "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
-   },
-   "keywords": [],
-   "author": "",
-   "license": "BSD-3-Clause",
-   "dependencies": {
-      "axios": "^0.26.1",
-      "bcryptjs": "^2.4.3",
-      "cloudinary": "^1.27.1",
-      "cors": "^2.8.5",
-      "dotenv": "^10.0.0",
-      "express": "^4.17.1",
-      "express-async-errors": "^3.1.1",
-      "express-fileupload": "^1.2.1",
-      "helmet": "^4.6.0",
-      "http-status-codes": "^2.1.4",
-      "jsonwebtoken": "^8.5.1",
-      "mongoose": "^6.0.13",
-      "nodemon": "^2.0.15",
-      "socket.io": "^4.4.0",
-      "xss-clean": "^0.1.1"
-   },
-   "engines": {
-      "node": "14.x"
-   }
+	"name": "fb-server",
+	"version": "1.0.0",
+	"description": "",
+	"main": "app.js",
+	"scripts": {
+		"start": "node app.js",
+		"dev": "nodemon app.js",
+		"create-env": "cat sample.env > .env"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "BSD-3-Clause",
+	"dependencies": {
+		"axios": "^0.26.1",
+		"bcryptjs": "^2.4.3",
+		"cloudinary": "^1.27.1",
+		"cors": "^2.8.5",
+		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"express-async-errors": "^3.1.1",
+		"express-fileupload": "^1.2.1",
+		"helmet": "^4.6.0",
+		"http-status-codes": "^2.1.4",
+		"jsonwebtoken": "^8.5.1",
+		"mongoose": "^6.0.13",
+		"nodemon": "^2.0.15",
+		"socket.io": "^4.4.0",
+		"xss-clean": "^0.1.1"
+	},
+	"engines": {
+		"node": "14.x"
+	}
 }
